fix top bar on firefox

--- a/app/stylesheets/themes/shapado/_main_bar.sass
+++ b/app/stylesheets/themes/shapado/_main_bar.sass
@@ -59,6 +59,7 @@
   margin: 0
 
   color: lightGrey
+  background: #222
 
   +fancy-matte-gradient(#888888, #222)
   a
